--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -1,11 +1,14 @@
-#+title: config.org
-#+author: mark bojack
-#+property: header-args :results silent
+#+TITLE: config.org
+#+AUTHOR: mark bojack
 
 * Background
-- Doom Emacs config.org file.
+
+Doom Emacs config.org file.
+
++PROPERTY: header-args :results silent
 
 * Sources
+
 - [[https://github.com/sachac][Sacha Chua]]
 - [[https://github.com/angrybacon/dotemacs][Mathieu Marques]]
 - [[https://github.com/jwiegley/dot-emacs/][John Wiegley]]
@@ -15,9 +18,8 @@
 
 Faster startup.  A David Wilson Emacs thing.  Perhaps it works in Doom Emacs?
 
-#+begin_src emacs-lisp :tangle yes
+;#+begin_src emacs-lisp :tangle yes
 
-;;; $DOOMDIR/config.el -*- lexical-binding: t; -*-
 
 ;; Make startup faster by reducing the frequency of garbage collection.
 (setq gc-cons-threshold (* 50 1000 1000))
@@ -27,46 +29,85 @@ Faster startup.  A David Wilson Emacs thing.  Perhaps it works in Doom Emacs?
 
 (if (file-exists-p (expand-file-name "config.el" user-emacs-directory))
     (load-file (expand-file-name "config.el" user-emacs-directory))
-  (org-babel-load-file (expand-file-name "config.org" user-emacs-directory)))
+    (org-babel-load-file (expand-file-name "config.org" user-emacs-directory)))
 
 ;; Make gc pauses faster by decreasing the threshold.
 (setq gc-cons-threshold (* 10 1000 1000))
 
 #+end_src
 
+* Mappings
+
+''#+begin_src emacs-lisp :tangle yes
+
+(map! :desc "Create Sparse Tree" :ne "SPC / s" #'org-sparse-tree)
+(map! :desc "Create Sparse Tree for Tags" :ne "SPC / t" #'org-tags-sparse-tree)
+(map! :ne "M-/" #'comment-or-uncomment-region)
+(map! :ne "SPC n r" #'deadgrep)
+(map! :ne "SPC n b" #'org-brain-visualize)
+(map! :ne "SPC n p" #'counsel-org-capture)
+
+#+end_src
+
 * Defaults
 
-Here are what I consider better defaults as per my own experience.
+** Part 1. setq-default :TODO:
 
-#+BEGIN_SRC emacs-lisp
-(setq-default
- ad-redefinition-action 'accept         ; Silence warnings for redefinition
- auto-save-list-file-prefix nil         ; Prevent tracking for auto-saves
- cursor-in-non-selected-windows nil     ; Hide the cursor in inactive windows
- cursor-type '(hbar . 2)                ; Underline-shaped cursor
- custom-unlispify-menu-entries nil      ; Prefer kebab-case for titles
- custom-unlispify-tag-names nil         ; Prefer kebab-case for symbols
- delete-by-moving-to-trash t            ; Delete files to trash
- fill-column 80                         ; Set width for automatic line breaks
- gc-cons-threshold (* 8 1024 1024)      ; We're not using Game Boys anymore
- help-window-select t                   ; Focus new help windows when opened
- indent-tabs-mode nil                   ; Stop using tabs to indent
- inhibit-startup-screen t               ; Disable start-up screen
- initial-scratch-message ""             ; Empty the initial *scratch* buffer
- mouse-yank-at-point t                  ; Yank at point rather than pointer
- read-process-output-max (* 1024 1024)  ; Increase read size per process
- recenter-positions '(5 top bottom)     ; Set re-centering positions
- scroll-conservatively 101              ; Avoid recentering when scrolling far
- scroll-margin 2                        ; Add a margin when scrolling vertically
- select-enable-clipboard t              ; Merge system's and Emacs' clipboard
- sentence-end-double-space nil          ; Use a single space after dots
- show-help-function nil                 ; Disable help text everywhere
- tab-always-indent 'complete            ; Tab indents first then tries completions
- tab-width 4                            ; Smaller width for tab characters
- uniquify-buffer-name-style 'forward    ; Uniquify buffer names
- warning-minimum-level :error           ; Skip warning buffers
- window-combination-resize t            ; Resize windows proportionally
- x-stretch-cursor t)                    ; Stretch cursor to the glyph width
+TODO: How the hell do I get doom-big-font to work?
+TODO: Do I actually need all this crap?
+
+(setq-default ad-redefinition-action 'accept         ; Silence warnings for redefinition
+              auto-save-list-file-prefix nil         ; Prevent tracking for auto-saves
+              cursor-in-non-selected-windows nil     ; Hide the cursor in inactive windows
+              cursor-type '(hbar . 2)                ; Underline-shaped cursor
+              custom-unlispify-menu-entries nil      ; Prefer kebab-case for titles
+              custom-unlispify-tag-names nil         ; Prefer kebab-case for symbols
+              delete-by-moving-to-trash t            ; Delete files to trash
+              fill-column 80                         ; Set width for automatic line breaks
+              gc-cons-threshold (* 8 1024 1024)      ; We're not using Game Boys anymore
+              help-window-select t                   ; Focus new help windows when opened
+              indent-tabs-mode nil                   ; Stop using tabs to indent
+              inhibit-startup-screen t               ; Disable start-up screen
+              initial-scratch-message ""             ; Empty the initial *scratch* buffer
+              mouse-yank-at-point t                  ; Yank at point rather than pointer
+              read-process-output-max (* 1024 1024)  ; Increase read size per process
+              recenter-positions '(5 top bottom)     ; Set re-centering positions
+              scroll-conservatively 101              ; Avoid recentering when scrolling far
+              scroll-margin 2                        ; Add a margin when scrolling vertically
+              select-enable-clipboard t              ; Merge system's and Emacs' clipboard
+              sentence-end-double-space nil          ; Use a single space after dots
+              show-help-function nil                 ; Disable help text everywhere
+              tab-always-indent 'complete            ; Tab indents first then tries completions
+              tab-width 4                            ; Smaller width for tab characters
+              uniquify-buffer-name-style 'forward    ; Uniquify buffer names
+              warning-minimum-level :error           ; Skip warning buffers
+              window-combination-resize t            ; Resize windows proportionally
+              x-stretch-cursor t)                    ; Stretch cursor to the glyph width
+#+BEGIN_SRC elisp
+
+
+;;; $DOOMDIR/config.el -*- lexical-binding: t; -*-
+
+(setq user-full-name "Mark Bojack"
+      user-mail-address "markbojack.si@gmail.com"
+      doom-font (font-spec :family "RobotoMono Nerd Font" :size 20 :weight 'bold)
+      ;doom-big-font (font-spec :family "RobotoMono Nerd Font" :size 16)
+      doom-variable-pitch-font (font-spec :family "sans" :size 13)
+      doom-theme 'doom-one
+      display-line-numbers-type 'relative
+      evil-split-window-below t
+      evil-vsplit-window-right t
+      ess-indent-offset 2
+      auto-save-default t
+      make-backup-files t
+      confirm-kill-emacs nil)
+
+#+END_SRC
+
+** Part 2.
+
+;#+begin_src emacs-lisp :tangle yes
+
 (blink-cursor-mode 0)                   ; Prefer a still cursor
 (delete-selection-mode 1)               ; Replace region when inserting text
 (fset 'yes-or-no-p 'y-or-n-p)           ; Replace yes/no prompts with y/n
@@ -75,107 +116,70 @@ Here are what I consider better defaults as per my own experience.
 (put 'downcase-region 'disabled nil)    ; Enable downcase-region
 (put 'upcase-region 'disabled nil)      ; Enable upcase-region
 (set-default-coding-systems 'utf-8)     ; Default to utf-8 encoding
-#+END_SRC
 
-Change a few indenting behaviors.
+#+end_src
 
-#+BEGIN_SRC emacs-lisp
+* Indenting
+
+;#+begin_src emacs-lisp :tangle yes
+
+,#+BEGIN_SRC emacs-lisp
 (put 'add-function 'lisp-indent-function 2)
 (put 'advice-add 'lisp-indent-function 2)
 (put 'plist-put 'lisp-indent-function 2)
-#+END_SRC
 
-** Fullscreen
+#+end_src
 
-Enable fullscreen. Given there are differences in meaning for /fullscreen/
-between window managers, the following tree aims to provide a pain-free
-experience with regard to fullscreen in most setups.
+* Fullscreen
 
-In the case of macOS, fullscreen means Emacs will occupy a dedicated workspace
-so we want to maximize it instead. Works best with titlebar-less frames.
+Increases the robustness of the fullscreen setting across various DEs/WMs.
 
-#+BEGIN_SRC emacs-lisp
+;#+begin_src emacs-lisp :tangle yes
+
 (pcase window-system
   ('w32 (set-frame-parameter nil 'fullscreen 'fullboth))
   (_ (set-frame-parameter nil 'fullscreen 'maximized)))
-#+END_SRC
 
-** Load Secrets
+#+end_src
 
-Small framework to read secrets out of =.secrets.eld= in order to keep sensible
-things out of version control. This is also used to have machine-specific
-settings. See =.secrets.eld.ori= for a preview of the supported format. Usage:
+And if that doesn't work, then here's some crap from stackoverflow:
 
-#+BEGIN_SRC emacs-lisp :tangle no
-(me/secret 'irc-password)               ; 4815162342
-(me/secret 'nothing)                    ; nil
-#+END_SRC
+How do I maximize/fullscreen Emacs on startup?
 
-#+BEGIN_SRC emacs-lisp
-(defun me/secret (&optional name fallback)
-  "Read a Lisp structure from the secret file.
-When NAME is provided, return the value associated to this key. If no value was
-found for NAME, return FALLBACK instead which defaults to nil."
-  (let ((file (expand-file-name ".secrets.eld")))
-    (when (file-exists-p file)
-      (with-demoted-errors "Error while parsing secret file: %S"
-        (with-temp-buffer
-          (insert-file-contents file)
-          (if-let ((content (read (buffer-string)))
-                   (name))
-              (alist-get name content fallback)
-            content))))))
-#+END_SRC
+(add-to-list 'initial-frame-alist '(fullscreen . maximized))
 
+Some window managers may not understand/work with =maximized= (or may not
+produce the desired effect), in that case try ~fullboth~ or ~fullscreen~.
 
+* Packages
 
+** flyspell
 
+Just adding hooks to (try) to get it to do what I want.
+Adjusting flyspell-overlay works, but generates an error.
+Using flyspell-mode works okay until I edit the org file,
+then flyspell mode becomes enabled.  Help.
 
+#+begin_src emacs-lisp :tangle yes
 
-
-
-
-
-
-
-
-
-
-
-;; SET UP ======================================================================
-;; setq ------------------------------------------------------------------------
-(setq user-full-name "Mark Bojack"
-      user-mail-address "markbojack.si@gmail.com"
-      doom-font (font-spec :family "RobotoMono Nerd Font" :size 10 :weight 'bold)
-      ;doom-big-font (font-spec :family "RobotoMono Nerd Font" :size 15)
-      doom-variable-pitch-font (font-spec :family "sans" :size 13)
-      doom-theme 'doom-one
-      display-line-numbers-type 'relative
-      evil-split-window-below t
-      evil-vsplit-window-right t
-      ess-indent-offset 2)
-
-(setq org-highest-priority ?A)
-(setq org-lowest-priority ?E)
-(setq org-default-priority ?B)
-
-(setq auto-save-default t
-      make-backup-files t)
-(setq confirm-kill-emacs nil)
-
-;; flyspell --------------------------------------------------------------------
 (dolist (hook '(change-log-mode-hook log-edit-mode-hook))
         (add-hook hook (lambda () (flyspell-mode -1))))
 
+;; this should enable flyspell mode for all text docs but org mode
 (add-hook 'text-mode-hook
           (lambda ()
             (when (not (equal major-mode 'org-mode)) (flyspell-mode t))))
 
+#+end_src
 
-;; PACKAGES ====================================================================
-;; MU4E ------------------------------------------------------------------------
-;; help: press H on homepage
-;;(mu4e t) ;; do i need this?
+** mu4e :TODO:
+
+This is actually pretty solid and it works.  Remember to check the documentation on the homepage with H.
+TODO: Some sources say the :config should be :init
+
+#+begin_src emacs-lisp :tangle yes
+
+;; (mu4e t) ;; do i need this?
 (use-package! mu4e
   :ensure nil
   ;:defer 20 ; Wait until 20 seconds after startup
@@ -203,7 +207,15 @@ found for NAME, return FALLBACK instead which defaults to nil."
         '((:name "From Dad" :query "from:Bojack" :key ?u :hide t)
           (:name "Today's messages" :query "date:today..now" :key ?t :hide t))))
 
-;; SMTPMAIL --------------------------------------------------------------------
+#+end_src
+
+** smtpmail :TODO:
+
+Another solid config, and this code is essential to get mu4e running.
+TODO: is it :config or :init?
+
+#+begin_src emacs-lisp :tangle yes
+
 (use-package! smtpmail
   :config
   (setq starttls-use-gnutls t
@@ -213,51 +225,72 @@ found for NAME, return FALLBACK instead which defaults to nil."
         smtpmail-smtp-server "smtp.gmail.com"
         smtpmail-smtp-service 587))
 
-;; ORG -------------------------------------------------------------------------
-(setq org-link-search-must-match-exact-headline nil)    ;; target words with a link
-(setq org-directory "~/Documents/org/")
+#+end_src
 
-;; ORG SUPER AGENDA ------------------------------------------------------------
-;; https://github.com/alphapapa/org-super-agenda
-(use-package! org-super-agenda
-  :after org-agenda     ;; you can also do (after! org-agenda (setq ... ))
-  :init
-  (setq org-super-agenda-groups '((:name "Today"
-                                   :time-grid t
-                                   :scheduled today)
-                                  (:name "Due today"
-                                   :deadline today)
-                                  (:name "Important"
-                                   :priority "A")
-                                  (:name "Overdue"
-                                   :deadline past)
-                                  (:name "Due soon"
-                                   :deadline future)
-                                  (:name "Big Outcomes"
-                                   :tag "bo")))
-  :config
-  (org-super-agenda-mode))
+** org
 
-(add-hook! 'org-mode-hook #'+org-pretty-mode #'mixed-pitch-mode)
-(add-hook! 'org-mode-hook (company-mode -1))
-(add-hook! 'org-capture-mode-hook (company-mode -1))
-(setq org-agenda-files '("~/Documents/org/remind.org"))
-;;(setq org-agenda-files (directory-files-recursively "~/Documents/org/" "\.org$"))
+*** vanilla org :TODO:
 
-(setq org-ellipsis " ▾ "
+Obviously, this needs to be organized.  Still deciding if I like the old-school or Doom formats.  So Doom formatting is it for now.
+
+In case I change my mind later, here's how you set all files in the org folder to be agenda files:
+(setq org-agenda-files (directory-files-recursively "~/Documents/org/" "\.org$"))
+
+TODO: is this an alternative to org-agenda-files or is it deprecated?
+(setq +org-capture-todo-file "tasks.org")
+
+**** setq
+
+;#+begin_src emacs-lisp :tangle yes
+
+(setq org-directory "~/Documents/org/"
+      org-agenda-files '("~/Documents/org/remind.org")
+      org-link-search-must-match-exact-headline nil     ;; target words with a link
+      org-highest-priority ?A
+      org-default-priority ?B
+      org-lowest-priority ?C                            ;; does this really have to be ?E by default?
+      org-ellipsis " ▾ "
       org-bullets-bullet-list '("·")
       org-tags-column -80
       org-agenda-files (ignore-errors (directory-files +org-dir t "\\.org$" t))
       org-log-done 'time
       org-refile-targets (quote ((nil :maxlevel . 1)))
+      org-tags-column -80
       org-agenda-skip-scheduled-if-done t
-      org-tags-column -80)
-      ;org-capture-templates '(("x" "Note" entry
-                               ;(file+olp+datetree "journal.org")
-                               ;"**** [ ] %U %?" :prepend t :kill-buffer t)
-                              ;("t" "Task" entry
-                               ;(file+headline "tasks.org" "Inbox")
-                               ;"* [ ] %?\n%i" :prepend t :kill-buffer t)))
+      org-priority-faces '((65 :foreground "#e45649")   ;; 65 in ASCII is A, etc or type ?A, ?B, etc
+                           (66 :foreground "#da8548")
+                           (67 :foreground "#0098dd"))
+      org-capture-templates '(("x" "Note" entry
+                               (file+olp+datetree "journal.org")
+                               "**** [ ] %U %?" :prepend t :kill-buffer t)
+                              ("t" "Task" entry
+                               (file+headline "tasks.org" "Inbox")
+                               "* [ ] %?\n%i" :prepend t :kill-buffer t)))
+
+#+end_src
+
+**** hook
+
+;#+begin_src emacs-lisp :tangle yes
+
+(add-hook! 'org-mode-hook #'+org-pretty-mode #'mixed-pitch-mode)
+(add-hook! 'org-mode-hook (company-mode -1))
+(add-hook! 'org-capture-mode-hook (company-mode -1))
+
+#+end_src
+
+**** popup rules
+
+;#+begin_src emacs-lisp :tangle yes
+
+(set-popup-rule! "^\\*Org Agenda" :side 'bottom :size 0.90 :select t :ttl nil)
+(set-popup-rule! "^CAPTURE.*\\.org$" :side 'bottom :size 0.90 :select t :ttl nil)
+
+#+end_src
+
+**** after
+
+;#+begin_src emacs-lisp :tangle yes
 
 (after! org
   (set-face-attribute 'org-link nil
@@ -299,29 +332,53 @@ found for NAME, return FALLBACK instead which defaults to nil."
                       :height 1.75
                       :weight 'bold)
 
+#+end_src
+
+*** org super agenda
+
+[[https://github.com/alphapapa/org-super-agenda][Github.]]
+
+;#+begin_src emacs-lisp :tangle yes
+
+(use-package! org-super-agenda
+  :after org-agenda     ;; you can also do (after! org-agenda (setq ... ))
+  :init
+  (setq org-super-agenda-groups '((:name "Today"
+                                   :time-grid t
+                                   :scheduled today)
+                                  (:name "Due today"
+                                   :deadline today)
+                                  (:name "Important"
+                                   :priority "A")
+                                  (:name "Overdue"
+                                   :deadline past)
+                                  (:name "Due soon"
+                                   :deadline future)
+                                  (:name "Big Outcomes"
+                                   :tag "bo")))
+  :config
+  (org-super-agenda-mode))
+
+#+end_src
+
+*** org fancy priorities
+
+;#+begin_src emacs-lisp :tangle yes
+
 (use-package org-fancy-priorities
   :ensure t
   :hook (org-mode . org-fancy-priorities-mode)
-  ;;:config (setq org-fancy-priorities-list '("⚡" "⬆" "⬇" "☕")))
-  :config (setq org-fancy-priorities-list '("" "" "" "")))  ; do same icon with diff colors
+  ;; :config (setq org-fancy-priorities-list '("⚡" "⬆" "⬇" "☕")))
+  :config (setq org-fancy-priorities-list '("" "" "")))      ;; the same icon with diff colors looks nice too
 
-(map! :desc "Create Sparse Tree" :ne "SPC / s" #'org-sparse-tree)
-(map! :desc "Create Sparse Tree for Tags" :ne "SPC / t" #'org-tags-sparse-tree)
-(map! :ne "M-/" #'comment-or-uncomment-region)
-(map! :ne "SPC n r" #'deadgrep)
-(map! :ne "SPC n b" #'org-brain-visualize)
-(map! :ne "SPC n p" #'counsel-org-capture)
+#+end_src
 
-;(setq +org-capture-todo-file "tasks.org")
-;(set-popup-rule! "^\\*Org Agenda" :side 'bottom :size 0.90 :select t :ttl nil)
-;(set-popup-rule! "^CAPTURE.*\\.org$" :side 'bottom :size 0.90 :select t :ttl nil)
-;(set-popup-rule! "^\\*org-brain" :side 'right :size 1.00 :select t :ttl nil)
-;(setq org-agenda-skip-scheduled-if-done t
-      ;org-priority-faces '((65 :foreground "#e45649") ; 65 in ASCII is A, etc or type ?A, ?B, etc
-                           ;(66 :foreground "#da8548")
-                           ;(67 :foreground "#0098dd")))
+*** org brain
 
-;; https://github.com/Kungsgeten/org-brain
+[[https://github.com/Kungsgeten/org-brain][Github.]]
+
+;#+begin_src emacs-lisp :tangle yes
+
 (use-package org-brain
   :ensure t
   :init
@@ -332,6 +389,7 @@ found for NAME, return FALLBACK instead which defaults to nil."
   (setq org-id-track-globally t)
   (setq org-id-locations-file "~/.emacs.d/.org-id-locations")
   (add-hook 'before-save-hook #'org-brain-ensure-ids-in-buffer)
+  (set-popup-rule! "^\\*org-brain" :side 'right :size 1.00 :select t :ttl nil)
   (push '("b" "Brain" plain (function org-brain-goto-end)
           "* %i%?" :empty-lines 1)
         org-capture-templates)
@@ -340,22 +398,14 @@ found for NAME, return FALLBACK instead which defaults to nil."
   (setq org-brain-include-file-entries nil
         org-brain-file-entries-use-title nil))
 
+#+end_src
 
-;; NOTES =======================================================================
+* Notes
 
-; How do I maximize/fullscreen Emacs on startup?
-; #+BEGIN_SRC elisp
-; (add-to-list 'initial-frame-alist '(fullscreen . maximized))
-; #+END_SRC
-;
-; Some window managers may not understand/work with =maximized= (or may not
-; produce the desired effect), in that case try ~fullboth~ or ~fullscreen~.
-
-;; Here are some additional functions/macros that could help you configure Doom:
-;;
-;; - `load!' for loading external *.el files relative to this one
-;; - `after!' for running code after a package has loaded
-;; - `add-load-path!' for adding directories to the `load-path', relative to
-;;   this file. Emacs searches the `load-path' when you load packages with
-;;   `require' or `use-package'.
-;; - `map!' for binding new keys
+Here are some additional functions/macros that could help you configure Doom:
+- `load!' for loading external *.el files relative to this one
+- `after!' for running code after a package has loaded
+- `add-load-path!' for adding directories to the `load-path', relative to
+  this file. Emacs searches the `load-path' when you load packages with
+  `require' or `use-package'.
+- `map!' for binding new keys
