--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -10,8 +10,6 @@
 #+PROPERTY: header-args :tangle no :results silent :eval no-export
 #+OPTIONS: coverpage:yes
 
-Alphabetize this later, also TOC?
-
 * Background
 ** Update Frequency
 - Continually maintained on an Arch-based system.
@@ -21,6 +19,7 @@ Alphabetize this later, also TOC?
 
 ** For new users
 - This is a literate config, so it generates =init.el= and =packages.el=
+- You can either place all config files in this folder into =~/.doom.d= (or =~/.config/doom=), or just copy =config.org= and uncomment `literate` in =init.el=, if not done already
 - As you know, if =init.el= or =packages.el= are modified, run ~doom/reload~ with =SPC h r r=
 - Modifying =config.org=
   + Modifications to this file will be realized after running the edited code block with =C-c C-c=
@@ -29,18 +28,11 @@ Alphabetize this later, also TOC?
 ** Special note on R
 - If R fails to work properly for whatever reason, try =SPC q r= as a preliminary measure
 
-* Speed
+** Let's get started
 According to [[https://nullprogram.com/blog/2016/12/22/][Chris Wellons]], the below makes this config run a little faster.
 
 #+BEGIN_SRC emacs-lisp
 ;;; config.el -*- lexical-binding: t; -*-
-#+END_SRC
-
-A [[https://github.com/daviwil][David Wilson]] trick: "Make gc pauses faster by decreasing the threshold."
-David's figure was modified in concordance with the config of [[https://github.com/angrybacon/dotemacs][Mathieu Marques]].
-
-#+BEGIN_SRC emacs-lisp
-(setq gc-cons-threshold (* 8 1024 1024))
 #+END_SRC
 
 * Configs
@@ -341,14 +333,17 @@ Selected variable settings from [[https://github.com/angrybacon/dotemacs][Mathie
               x-stretch-cursor t)                    ; Stretch cursor to the glyph width
 #+END_SRC
 
-** setq
+** setq :TODO:
 TODO https://stackoverflow.com/questions/53769315/emacs-ess-indent-after
+
+A [[https://github.com/daviwil][David Wilson]] trick: "Make gc pauses faster by decreasing the threshold." David's figure was modified in concordance with the config of [[https://github.com/angrybacon/dotemacs][Mathieu Marques]].
 
 #+BEGIN_SRC emacs-lisp
 (setq doom-theme 'doom-one
       display-line-numbers-type 'relative
       evil-split-window-below t
       evil-vsplit-window-right t
+      gc-cons-threshold (* 8 1024 1024)
       auto-save-default t
       make-backup-files t
       ess-indent-offset 2
